apps/linkding/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: linkding
  namespace: default
spec:
  selector:
    app: linkding
  ports:
    - name: http
      port: 80
      targetPort: 9090
  type: ClusterIP
